// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Buttons/IconButton Light 1`] = `
.c0 {
  padding: 1rem;
  height: 100vh;
  background-color: #252525;
}

.c1 {
  background-color: transparent;
  width: 50px;
  height: 50px;
  border: 1px solid #FFF;
  color: #FFF;
  cursor: pointer;
}

.c1:hover {
  background-color: #FFF;
  color: #252525;
  -webkit-transition: all 0.2s ease-out;
  transition: all 0.2s ease-out;
}

<div
  className="c0"
>
  <div
    style={
      Object {
        "maxWidth": 300,
      }
    }
  >
    <button
      aria-label="Example button"
      className="c1"
    >
      <svg
        fill="none"
        height={24}
        stroke="currentColor"
        strokeLinecap="round"
        strokeLinejoin="round"
        strokeWidth={2}
        width={24}
      >
        <path
          d="M5 12h14M12 5l7 7-7 7"
        />
      </svg>
    </button>
  </div>
</div>
`;

exports[`Storyshots Buttons/IconButton Primary 1`] = `
.c0 {
  padding: 1rem;
  height: 100vh;
  background-color: #F5F5F5;
}

.c1 {
  background-color: transparent;
  width: 50px;
  height: 50px;
  border: 1px solid #6D6E70;
  color: #6D6E70;
  cursor: pointer;
}

.c1:hover {
  background-color: #6D6E70;
  color: #FFF;
  -webkit-transition: all 0.2s ease-out;
  transition: all 0.2s ease-out;
}

<div
  className="c0"
>
  <div
    style={
      Object {
        "maxWidth": 300,
      }
    }
  >
    <button
      aria-label="Example button"
      className="c1"
      data-testid="primary-icon-button"
    >
      <svg
        fill="none"
        height={24}
        stroke="currentColor"
        strokeLinecap="round"
        strokeLinejoin="round"
        strokeWidth={2}
        width={24}
      >
        <path
          d="M5 12h14M12 5l7 7-7 7"
        />
      </svg>
    </button>
  </div>
</div>
`;

exports[`Storyshots Buttons/IconButton Primary Inverted 1`] = `
.c0 {
  padding: 1rem;
  height: 100vh;
  background-color: #6D6E70;
}

.c1 {
  background-color: transparent;
  width: 50px;
  height: 50px;
  border: 1px solid #FFF;
  color: #FFF;
  cursor: pointer;
}

.c1:hover {
  background-color: #FFF;
  color: #6D6E70;
  -webkit-transition: all 0.2s ease-out;
  transition: all 0.2s ease-out;
}

<div
  className="c0"
>
  <div
    style={
      Object {
        "maxWidth": 300,
      }
    }
  >
    <button
      aria-label="Example button"
      className="c1"
    >
      <svg
        fill="none"
        height={24}
        stroke="currentColor"
        strokeLinecap="round"
        strokeLinejoin="round"
        strokeWidth={2}
        width={24}
      >
        <path
          d="M5 12h14M12 5l7 7-7 7"
        />
      </svg>
    </button>
  </div>
</div>
`;
